CORE-37716: spacing and font fixes on WE.

--- a/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/sameday-express-delivery/component/_sameday-express-pdp.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/sameday-express-delivery/component/_sameday-express-pdp.scss
@@ -2,7 +2,6 @@
   .cart-shipping-method {
     .carrier-title {
       color: $pdp-delivery-section-title;
-      font-family: $we-bold;
     }
 
     .method-title {
